# pennyworth

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  template.yaml
.github/workflows/: deploy.yml
doc/: architecture.md  cli-tool-auth.md  cli-tool.md  cost.md  deployment.md  overview.md  plan.md  sam-build-consistency.md  security.md  tagging.md  test.md  todo.md
hello_world/: app.py
src/: __init__.py
src/cli/: __init__.py  auth.py  main.py
src/lambda/: __init__.py  api.py  app.py  auth.py  errors.py  log.py  mcp.py  model_router.py  openai.py  parameters.py  requirements.txt  utils.py  version.py  well_known.py
src/lambda/handlers/: mcp.py  openai.py  protected.py  users.py  version.py  well_known.py
src/session/: __init__.py  __main__.py
src/shared/: __init__.py
src/shared/constants/: __init__.py
src/shared/session/: __init__.py  __main__.py
tests/: __init__.py  conftest.py  users.py
tests/integration/api/: test_users.py
tests/newman/: all.sh
tests/postman/collection/: api.json
tests/postman/env/: prod.json
tests/unit/handlers/: test_parameters.py
tests/utils/: cognito.py
