[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | venv
  | \.aws-sam
)/
'''

[project]
name = "pennyworth"
description = "Serverless, OpenAI-compatible API proxy for AWS Bedrock and other LLMs."
authors = [
    { name = "John Byrd" }
]
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "users.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-ra -q" 